--- a/extra/to-do-styles.css
+++ b/extra/to-do-styles.css
@@ -73,7 +73,7 @@ input {
 }
 
 #logo-img {
-    height: 50px;
+    height: 45px;
     width: auto;
     margin-top: 20px;
     margin-bottom: 50px;
@@ -123,9 +123,9 @@ input {
 #profile-img {
     height: 80px;
     width: auto;
-    position: fixed;
+    /* position: fixed;
     bottom: 0;
-    margin-bottom: 30px;
+    margin-bottom: 30px; */
 }
 
 #date {
@@ -169,4 +169,11 @@ input {
     border-bottom-right-radius: 10px;
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 1200px) {
+    #logo-img {
+        height: 35px;
+        width: auto;
+    }
 }
