--- a/extra/to-do-styles.css
+++ b/extra/to-do-styles.css
@@ -3,6 +3,7 @@ body {
     font-weight: 400;
     background-color: rgb(249, 234, 242);
     margin-left: 15px;
+    color: rgb(34, 34, 34);
 }
 
 button:focus {
@@ -27,6 +28,10 @@ h1 {
 
 input {
     padding-left: 15px;
+}
+
+.collapsible {
+    cursor: pointer;
 }
 
 #hamburger {
@@ -79,6 +84,10 @@ input {
     margin-bottom: 50px;
 }
 
+.navbar {
+    align-items: flex-start;
+}
+
 .nav-item {
     margin-bottom: 30px;
 }
@@ -113,6 +122,12 @@ input {
     transform-origin: bottom left;
 }
 
+.navLinks {
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
 .active-nav-link {
     background-color: rgba(212, 212, 212, 0.34);
     color: rgb(196, 174, 196);
@@ -139,14 +154,22 @@ input {
     border-radius: 25px;
     box-shadow: 1.5px 1.5px 5px 5px #888888;
     margin-bottom: 50px;
+    padding-bottom: 10px;
+    background-color: rgb(107, 77, 87);
 }
 
 .tod-num {
     font-size: 3rem;
+    color: rgb(219, 171, 190);
+}
+
+.tod-label {
+    color: white;
 }
 
 #add-item {
     display: flex;
+    margin-bottom: 10px;
 }
 
 #add-to-do {
@@ -171,9 +194,24 @@ input {
     justify-content: center;
 }
 
-@media (max-width: 1200px) {
+.to-do-item {
+    background-color: rgb(186, 161, 167);
+    color: white;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border-top: 1px solid white;
+    padding: 5px;
+}
+
+@media (max-width: 1220px) {
     #logo-img {
         height: 35px;
         width: auto;
+    }
+}
+
+@media (min-width: 1220px) {
+    #hamburger {
+        display: none;
     }
 }
