--- a/extra/to-do-styles.css
+++ b/extra/to-do-styles.css
@@ -139,6 +139,8 @@ input {
     color: rgb(196, 174, 196);
     border-left: 3px solid rgb(169, 150, 169);
     font-weight: 500;
+    transition: font-weight 0.15s;
+    transition: background-color 0.25s;
 }
 
 #profile-img {
