--- a/extra/to-do-styles.css
+++ b/extra/to-do-styles.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
-
 body {
     font-size: 2rem;
     font-weight: 400;
@@ -47,7 +45,7 @@ input {
 }
 
 #search-bar {
-    margin-top: 50px;
+    margin-top: 5px;
     display: flex;
     margin-bottom: 50px;
 }
@@ -56,6 +54,7 @@ input {
     width: 35rem;
     border: 1px solid rgb(107, 77, 87);
     border-radius: 10px;
+    outline: none;
 }
 
 #search-btn {
@@ -262,7 +261,6 @@ input {
     color: rgb(169, 150, 169);
     text-decoration: none;
 }
-
 
 #add-button {
     height: 3.5rem;
